--- a/demo/app/package.json
+++ b/demo/app/package.json
@@ -3,13 +3,13 @@
   "main": "app.js",
   "version": "1.6.0",
   "author": {
-    "name": "Telerik",
-    "email": "support@telerik.com"
+    "name": "TestFairy",
+    "email": "support@testfairy.com"
   },
-  "description": "Nativescript hello-world-ts project template",
+  "description": "TestFairy is a powerful beta-testing platform for mobile applications.",
   "license": "Apache-2.0",
   "keywords": [
-    "telerik",
+    "TestFairy",
     "mobile",
     "nativescript",
     "{N}",
@@ -19,87 +19,16 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/NativeScript/template-hello-world-ts.git"
+    "url": "git+ssh://git@github.com/testfairy/nativescript-testfairy.git"
   },
   "bugs": {
-    "url": "https://github.com/NativeScript/template-hello-world-ts/issues"
+    "url": "https://github.com/testfairy/nativescript-testfairy/issues"
   },
-  "homepage": "https://github.com/NativeScript/template-hello-world-ts",
+  "homepage": "https://www.testfairy.com",
   "android": {
     "v8Flags": "--expose_gc"
   },
   "devDependencies": {
     "nativescript-dev-typescript": "^0.3.0"
-  },
-  "_id": "tns-template-hello-world-ts@1.6.0",
-  "_shasum": "a567c2b9a56024818c06596dab9629d155c5b8a8",
-  "_resolved": "https://registry.npmjs.org/tns-template-hello-world-ts/-/tns-template-hello-world-ts-1.6.0.tgz",
-  "_from": "tns-template-hello-world-ts@latest",
-  "scripts": {},
-  "_npmVersion": "2.14.7",
-  "_nodeVersion": "4.2.2",
-  "_npmUser": {
-    "name": "enchev",
-    "email": "vladimir.enchev@gmail.com"
-  },
-  "dist": {
-    "shasum": "a567c2b9a56024818c06596dab9629d155c5b8a8",
-    "tarball": "http://registry.npmjs.org/tns-template-hello-world-ts/-/tns-template-hello-world-ts-1.6.0.tgz"
-  },
-  "maintainers": [
-    {
-      "name": "enchev",
-      "email": "vladimir.enchev@gmail.com"
-    },
-    {
-      "name": "erjangavalji",
-      "email": "erjan.gavalji@gmail.com"
-    },
-    {
-      "name": "fatme",
-      "email": "hfatme@gmail.com"
-    },
-    {
-      "name": "hdeshev",
-      "email": "hristo@deshev.com"
-    },
-    {
-      "name": "kerezov",
-      "email": "d.kerezov@gmail.com"
-    },
-    {
-      "name": "ligaz",
-      "email": "stefan.dobrev@gmail.com"
-    },
-    {
-      "name": "nsndeck",
-      "email": "nedyalko.nikolov@telerik.com"
-    },
-    {
-      "name": "rosen-vladimirov",
-      "email": "rosen.vladimirov.91@gmail.com"
-    },
-    {
-      "name": "sdobrev",
-      "email": "stefan.dobrev@gmail.com"
-    },
-    {
-      "name": "tailsu",
-      "email": "tailsu@gmail.com"
-    },
-    {
-      "name": "teobugslayer",
-      "email": "teobugslayer@gmail.com"
-    },
-    {
-      "name": "valio.stoychev",
-      "email": "valio.stoychev@gmail.com"
-    }
-  ],
-  "_npmOperationalInternal": {
-    "host": "packages-5-east.internal.npmjs.com",
-    "tmp": "tmp/tns-template-hello-world-ts-1.6.0.tgz_1455717516189_0.6427943941671401"
-  },
-  "directories": {},
-  "readme": "ERROR: No README data found!"
+  }
 }
