--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_deploy:
 - carthage update
 - rm -rf src/platforms/ios/TestFairySDK.*
 - cp -R Carthage/Build/iOS/TestFairySDK.framework* src/platforms/ios/.
+- cd src && npm i && npm run tsc && cd ..
 - cd publish
 - ./pack.sh
 - cd package
