--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: objective-c
-node_js: '6' 
 before_deploy:
   - npm install -g yarn
   - brew install carthage
   - carthage update
   - rm -rf src/platforms/ios/TestFairySDK.*
   - cp -R Carthage/Build/iOS/TestFairySDK.framework* src/platforms/ios/.
+  - rm -rf Carthage
   - cd publish
   - ./pack.sh
   - cd package
