--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 matrix:
   include:
-    - stage: "Lint"
-      language: node_js
-      os: linux
-      node_js: "8"
-      script: cd src && npm run ci.tslint && cd ../demo && npm run ci.tslint
+#     - stage: "Lint"
+#       language: node_js
+#       os: linux
+#       node_js: "8"
+#       script: cd src && npm run ci.tslint && cd ../demo && npm run ci.tslint
     - stage: "Build and Test"
       env: 
         - BuildAndroid="28"
