--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,23 @@
 language: objective-c
 
 before_install:
-- wget http://dl.google.com/android/android-sdk_r24.4.1-macosx.zip
-- unzip android-sdk_r24.4.1-macosx.zip
-- export ANDROID_HOME=$PWD/android-sdk-macosx
-- export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-- echo yes | android update sdk --filter platform-tools --no-ui --force > /dev/null
-- echo yes | android update sdk --filter android-28 --no-ui --force > /dev/null
-- echo yes | android update sdk --filter build-tools-28.0.3 --all --no-ui --force > /dev/null
-
-before_install:
+    - wget http://dl.google.com/android/android-sdk_r24.4.1-macosx.zip
+    - unzip android-sdk_r24.4.1-macosx.zip
+    - export ANDROID_HOME=$PWD/android-sdk-macosx
+    - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+    - echo yes | android update sdk --filter platform-tools --no-ui --force > /dev/null
+    - echo yes | android update sdk --filter android-28 --no-ui --force > /dev/null
+    - echo yes | android update sdk --filter build-tools-28.0.3 --all --no-ui --force > /dev/null
+    - nvm install stable
+    - nvm use stable
     - sudo pip install --upgrade pip
     - sudo pip install six
 
 install:
+    - brew install carthage
     - echo no | npm install -g nativescript
     - tns usage-reporting disable
     - tns error-reporting disable
-    - brew install carthage
 
 before_script:
     - carthage update
