--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
 before_script:
 - carthage update
 - rm -rf src/platforms/ios/TestFairySDK.*
+- ls -lsrta Carthage && ls -lsrta Carthage/Build && ls -lsrta Carthage/Build/iOS/
 - cp -R Carthage/Build/iOS/TestFairySDK.framework* src/platforms/ios/.
 - rm -rf Carthage
 script:
