--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,8 @@
     "typings": "index.d.ts",
     "nativescript": {
         "platforms": {
-            "android": "5.2.0",
-            "ios": "5.2.0"
+            "android": "6.0.0",
+            "ios": "6.0.1"
         }
     },
     "repository": {
@@ -15,21 +15,17 @@
         "url": "https://github.com/testfairy/nativescript-testfairy.git"
     },
     "scripts": {
-        "tsc": "tsc",
+        "tsc": "npm i && tsc",
         "build": "npm run tsc && npm run build.native",
         "build.native": "node scripts/build-native.js",
-        "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && npx rimraf -- package-lock.json && cd ../src",
-        "test.android": "npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
-        "test.ios": "npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
         "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
-        "plugin.tscwatch": "npm run tsc -- -w",
-        "demo.ios": "npm run tsc && cd ../demo && tns run ios --syncAllFiles --emulator",
-        "demo.android": "npm run tsc && cd ../demo && tns run android --syncAllFiles --emulator",
-        "demo.reset": "cd ../demo && npx rimraf -- hooks node_modules platforms package-lock.json",
-        "plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-testfairy && tns plugin add ../src",
-        "clean": "npm run demo.reset && npx rimraf -- node_modules package-lock.json && npm i",
         "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**' --exclude '**/platforms/**'",
-        "prepack": "npm run build.native"
+        "prepack": "npm run build.native",
+        "demo.ios": "npm i && cd ../demo && tns run ios",
+        "demo.android": "npm i && cd ../demo && tns run android",
+        "demo.reset": "cd ../demo && npx rimraf -- hooks node_modules platforms package-lock.json",
+        "plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-testfairy && tns plugin add ../src && cd ../demo-angular && tns plugin remove nativescript-testfairy && tns plugin add ../src",
+        "clean": "npm run demo.reset && npm run demo-angular.reset && npx rimraf -- node_modules package-lock.json && npm i"
     },
     "keywords": [
         "TestFairy",
@@ -52,9 +48,9 @@
         "tns-core-modules": "^3.0.0"
     },
     "devDependencies": {
-        "tns-core-modules": "^5.0.0",
-        "tns-platform-declarations": "^5.0.0",
-        "typescript": "~3.3.3",
+        "tns-core-modules": "^6.0.0",
+        "tns-platform-declarations": "^6.0.0",
+        "typescript": "~3.4.5",
         "prompt": "^1.0.0",
         "rimraf": "^2.6.3",
         "tslint": "^5.12.1",
