--- a/demo/.migration_backup/package.json
+++ b/demo/.migration_backup/package.json
@@ -1,10 +1,15 @@
 {
+  "nativescript": {
+    "id": "org.nativescript.demo",
+    "tns-ios": {
+      "version": "5.3.1"
+    }
+  },
   "dependencies": {
     "nativescript-theme-core": "^1.0.4",
     "nativescript-unit-test-runner": "^0.4.1",
     "nativescript-testfairy": "file:../src",
-    "@nativescript/core": "7.0.0",
-    "@nativescript/webpack": "3.0.0"
+    "tns-core-modules": "^5.0.0"
   },
   "devDependencies": {
     "jasmine-core": "^2.5.2",
@@ -13,8 +18,9 @@
     "karma-nativescript-launcher": "^0.4.0",
     "nativescript-css-loader": "~0.26.1",
     "nativescript-dev-typescript": "~0.9.0",
-    "tslint": "~5.12.1",
-    "@nativescript/types": "7.0.0"
+    "nativescript-dev-webpack": "~0.21.0",
+    "tns-platform-declarations": "^5.0.0",
+    "tslint": "~5.12.1"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
