--- a/demo/package.json
+++ b/demo/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/NativeScript/nativescript-app-templates",
   "dependencies": {
     "@nativescript/core": "~7.0.0",
-    "@nativescript/theme": "~2.3.0"
+    "@nativescript/theme": "~2.3.0",
+    "nativescript-testfairy": "file:../src"
   },
   "devDependencies": {
     "@nativescript/android": "7.0.1",
