--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ before_install:
 - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 - echo yes | android update sdk --filter platform-tools --no-ui --force > /dev/null
 - echo yes | android update sdk --filter android-28 --no-ui --force > /dev/null
-- echo yes | android update sdk --filter build-tools-28.0.3 --all --no-ui --force
-  > /dev/null
+- echo yes | android update sdk --filter build-tools-28.0.3 --all --no-ui --force > /dev/null
 - nvm install v12.0.0
 - nvm use v12.0.0
 - sudo pip install --upgrade pip
@@ -32,7 +31,8 @@ script:
 - travis_wait travis_retry tns build ios
 - travis_wait travis_retry tns build android
 before_deploy:
-- cd publish
+- pwd && ls -lsrt
+- cd ../publish
 - sh pack.sh
 - cd package
 deploy:
