--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,4 +50,4 @@ jobs:
     - name: Build sample project for Android with TestFairy
       run: |
         cd src && npm i && npm run tsc && cd ../demo
-        tns build ios
+        tns build android
