--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,30 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
+    timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '15.12.0'
-          registry-url: 'https://registry.npmjs.org'
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '15.12.0'
+    - name: Install Dependencies
+      run: |
+        brew install carthage
+        npm install -g nativescript@7.0.11
+        tns usage-reporting disable
+        tns error-reporting disable
+    - name: Update iOS SDK
+      run: |
+        carthage update
+        rm -rf src/platforms/ios/TestFairySDK.*
+        cp -R Carthage/Build/iOS/TestFairy.framework* src/platforms/ios/.
+        rm -rf Carthage
       - name: Release Nativescript to npm
         run: |
-          echo "Done"
+          cd ../publish
+          sh pack.sh
+          cd package
+          npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
