--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,8 @@ jobs:
         rm -rf Carthage
     - name: Release Nativescript to npm
       run: |
+        pwd
+        ls -lsrta
         cd ../publish
         sh pack.sh
         cd package
