--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,11 +34,11 @@ jobs:
         rm -rf Carthage
     - name: Release Nativescript to npm
       run: |
-        pwd
-        ls -lsrta
-        cd ../publish
+        cd publish
         sh pack.sh
+        ls -lsrta
         cd package
+        ls -lsrta
         npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
